--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -2,6 +2,9 @@
     <nav class="navbar bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">BikeCatalog</a>
+            <a class="navbar-link" href="/admin" data-toggle="tooltip" data-placement="bottom" title="Admin panel">
+                <i class="fa-solid fa-user"></i>
+            </a>
         </div>
     </nav>
 </header>
