--- a/src/main/resources/templates/admin/bike/form.html
+++ b/src/main/resources/templates/admin/bike/form.html
@@ -3,12 +3,15 @@
 <body>
 
 <th:block layout:fragment="page-content">
-    <h1>
+    <h3>
         <a class="icon-link" style="text-decoration: none;" th:href="@{/admin/bikes}">
             <i class="fa-solid fa-left-long"></i>
         </a>
-        <span th:text="${bike.id} != null ? 'Edit bike' : 'Add new bike'" />
-    </h1>
+        Back
+    </h3>
+
+    <h1 th:text="${bike.id} != null ? 'Edit bike' : 'Add new bike'" />
+
     <form th:action="@{/admin/bikes/save}" enctype="multipart/form-data" th:object="${bike}" method="post">
         <input type="hidden" th:field="*{id}">
         <div class="mb-3" th:if="${bike.id != null}">
@@ -77,11 +80,11 @@
                     </tr>
                 </tbody>
             </table>
-            <button class="btn btn-primary" onclick="return addProperty()">
+            <button class="btn btn-success" onclick="return addProperty()">
                 Add property
             </button>
         </div>
-        <button type="submit" class="btn btn-primary">Save</button>
+        <button type="submit" class="btn btn-primary w-100">Save</button>
     </form>
 </th:block>
 
