--- a/src/main/resources/templates/admin/brand/form.html
+++ b/src/main/resources/templates/admin/brand/form.html
@@ -3,12 +3,15 @@
 <body>
 
 <th:block layout:fragment="page-content">
-    <h1>
+    <h3>
         <a class="icon-link" style="text-decoration: none;" th:href="@{/admin/brands}">
             <i class="fa-solid fa-left-long"></i>
         </a>
-        <span th:text="${brand.id} != null ? 'Edit brand' : 'Add new brand'" />
-    </h1>
+        Back
+    </h3>
+
+    <h1 th:text="${brand.id} != null ? 'Edit brand' : 'Add new brand'" />
+
     <form th:action="@{/admin/brands/save}" th:object="${brand}" method="post">
         <input type="hidden" th:field="*{id}">
         <div class="mb-3" th:if="${brand.id != null}">
@@ -19,7 +22,7 @@
             <label for="nameInput" class="form-label">Name</label>
             <input type="text" class="form-control" id="nameInput" th:field="*{name}">
         </div>
-        <button type="submit" class="btn btn-primary">Save</button>
+        <button type="submit" class="btn btn-primary w-100">Save</button>
     </form>
 </th:block>
 
