--- a/src/main/resources/templates/admin/brand/index.html
+++ b/src/main/resources/templates/admin/brand/index.html
@@ -3,12 +3,14 @@
 <body>
 
 <th:block layout:fragment="page-content">
-    <h1>
+    <h3>
         <a class="icon-link" style="text-decoration: none;" th:href="@{/admin}">
             <i class="fa-solid fa-left-long"></i>
         </a>
-        Brands:
-    </h1>
+        Back
+    </h3>
+
+    <h1>Brands:</h1>
 
     <table class="table">
         <thead>
@@ -34,7 +36,7 @@
         </tbody>
     </table>
 
-    <a class="btn btn-primary" role="button" th:href="@{/admin/brands/new}" >
+    <a class="btn btn-primary w-100" role="button" th:href="@{/admin/brands/new}" >
         Add new brand
     </a>
 </th:block>
