--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -9,7 +9,7 @@
             <button type="submit" class="btn btn-secondary">Logout</button>
         </form>
     </div>
-    <h1>Admin Panel:</h1>
+    <h1>Admin panel:</h1>
     <div class="list-group">
         <a th:href="@{/admin/bikes}" class="list-group-item list-group-item-action">Bikes</a>
         <a th:href="@{/admin/brands}" class="list-group-item list-group-item-action">Brands</a>
