--- a/src/main/resources/templates/bike/show.html
+++ b/src/main/resources/templates/bike/show.html
@@ -3,19 +3,30 @@
 <body>
 
 <th:block layout:fragment="page-content">
-    <h1>
+    <h1 class="mt-3">
         <a onclick="goBack()" class="icon-link" style="text-decoration: none;">
             <i class="fa-solid fa-left-long"></i>
         </a>
-        <span th:text="${bike.name}" />
+        Back
     </h1>
-    <h5>Brand: <span th:text="${brand} != null ? ${brand} : 'No brand'" /></h5>
-    <h5>Category: <span th:text="${category} != null ? ${category} : 'No category'" /></h5>
-    <h5>Created At: <span th:text="${bike.createdAt} != null ? ${bike.createdAt} : '-'" /></h5>
-    <h5>Updated At: <span th:text="${bike.updatedAt} != null ? ${bike.updatedAt} : '-'" /></h5>
-    <img class="img-thumbnail img-bike" th:src="${!#strings.isEmpty(bike.thumbnail)} ? @{/thumbnails/{thumbnail}(thumbnail = ${bike.thumbnail})} : @{/images/bike.png}" alt="Bike Image">
-    <p th:utext="${bike.content}" />
-    <h5>Properties:</h5>
+
+    <div class="row align-items-center mt-3">
+        <div class="col-lg-6" >
+            <img class="img-thumbnail" th:src="${!#strings.isEmpty(bike.thumbnail)} ? @{/thumbnails/{thumbnail}(thumbnail = ${bike.thumbnail})} : @{/images/bike.png}" alt="Bike Image">
+        </div>
+        <div class="col-lg-6" >
+            <h3>Name: <span th:text="${bike.name}" /></h3>
+            <h5>Brand: <span th:text="${brand} != null ? ${brand} : 'No brand'" /></h5>
+            <h5>Category: <span th:text="${category} != null ? ${category} : 'No category'" /></h5>
+            <h5>Created At: <span th:text="${bike.createdAt} != null ? ${#dates.format(bike.createdAt, 'dd-MM-yyyy HH:mm')} : '-'" /></h5>
+            <h5>Updated At: <span th:text="${bike.updatedAt} != null ? ${#dates.format(bike.updatedAt, 'dd-MM-yyyy HH:mm')} : '-'" /></h5>
+        </div>
+    </div>
+
+    <p class="mt-3" th:utext="${bike.content}" />
+
+    <th:block th:if="${#lists.size(bike.properties) > 0}">
+    <h3 class="mt-5">Properties:</h3>
     <table class="table">
         <tbody>
         <tr th:each="property : ${bike.properties}">
@@ -24,6 +35,7 @@
         </tr>
         </tbody>
     </table>
+    </th:block>
 </th:block>
 
 <script layout:fragment="page-script" th:inline="javascript">
